@@ -1,4 +1,8 @@
-﻿2010-11-20 Alex Tutubalin <lexa@lexa.ru>
+﻿2010-11-21 Alex Tutubalin <lexa@lexa.ru>
+	*  Исправления в green_matching для некоторых layouts байеровских
+	   матриц. Спасибо Сергею Павлову.
+
+2010-11-20 Alex Tutubalin <lexa@lexa.ru>
         * Update for new demosaic-pack-GPL3
 	* LibRaw 0.12.0-Beta1
 
