@@ -21,7 +21,7 @@ it under the terms of the one of three licenses as you choose:
    for more information
 */
 
-#line 265 "dcraw/dcraw.c"
+#line 263 "dcraw/dcraw.c"
 #define CLASS LibRaw::
 #include "libraw/libraw_types.h"
 #define LIBRAW_LIBRARY_BUILD
@@ -29,7 +29,7 @@ it under the terms of the one of three licenses as you choose:
 #include "libraw/libraw.h"
 #include "internal/defines.h"
 #include "internal/var_defines.h"
-#line 275 "dcraw/dcraw.c"
+#line 273 "dcraw/dcraw.c"
 
 #ifndef __GLIBC__
 char *my_memmem (char *haystack, size_t haystacklen,
@@ -44,7 +44,7 @@ char *my_memmem (char *haystack, size_t haystacklen,
 #define memmem my_memmem
 #endif
 
-#line 309 "dcraw/dcraw.c"
+#line 307 "dcraw/dcraw.c"
 
 ushort CLASS sget2 (uchar *s)
 {
@@ -119,7 +119,7 @@ void CLASS read_shorts (ushort *pixel, int count)
   if ((order == 0x4949) == (ntohs(0x1234) == 0x1234))
       swab ((char*)pixel, (char*)pixel, count*2);
 }
-#line 387 "dcraw/dcraw.c"
+#line 385 "dcraw/dcraw.c"
 
 void CLASS canon_600_fixed_wb (int temp)
 {
@@ -593,7 +593,7 @@ void CLASS canon_compressed_load_raw()
   FORC4 if (cblack[4+c]) cblack[c] /= cblack[4+c];
 }
 
-#line 871 "dcraw/dcraw.c"
+#line 869 "dcraw/dcraw.c"
 int CLASS ljpeg_start (struct jhead *jh, int info_only)
 {
   int c, tag, len;
@@ -1213,7 +1213,7 @@ void CLASS fuji_load_raw()
   free (pixel);
 #endif
 }
-#line 1495 "dcraw/dcraw.c"
+#line 1493 "dcraw/dcraw.c"
 void CLASS ppm_thumb()
 {
   char *thumb;
@@ -1748,7 +1748,7 @@ void CLASS leaf_hdr_load_raw()
   }
 }
 
-#line 2033 "dcraw/dcraw.c"
+#line 2031 "dcraw/dcraw.c"
 void CLASS sinar_4shot_load_raw()
 {
   ushort *pixel;
@@ -3010,7 +3010,7 @@ void CLASS smal_v9_load_raw()
     smal_decode_segment (seg+i, holes);
   if (holes) fill_holes (holes);
 }
-#line 3459 "dcraw/dcraw.c"
+#line 3457 "dcraw/dcraw.c"
 
 void CLASS crop_pixels()
 {
@@ -3420,6 +3420,7 @@ void CLASS green_matching()
   const float thr = 0.01f;
   if(FC(oj, oi) != 3) oj++;
   if(FC(oj, oi) != 3) oi++;
+  if(FC(oj, oi) != 3) oj--;
 
   img = (ushort (*)[4]) calloc (height*width, sizeof *image);
   merror (img, "green_matching()");
@@ -4400,7 +4401,7 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
   }
 }
 
-#line 4852 "dcraw/dcraw.c"
+#line 4851 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -4956,7 +4957,7 @@ void CLASS parse_kodak_ifd (int base)
   }
 }
 
-#line 5412 "dcraw/dcraw.c"
+#line 5411 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -6192,7 +6193,7 @@ void CLASS parse_cine()
   data_offset  = (INT64) get4() + 8;
   data_offset += (INT64) get4() << 32;
 }
-#line 6654 "dcraw/dcraw.c"
+#line 6653 "dcraw/dcraw.c"
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 {
   static const struct {
@@ -6825,7 +6826,7 @@ short CLASS guess_byte_order (int words)
   return sum[0] < sum[1] ? 0x4d4d : 0x4949;
 }
 
-#line 7290 "dcraw/dcraw.c"
+#line 7289 "dcraw/dcraw.c"
 
 float CLASS find_green (int bps, int bite, int off0, int off1)
 {
@@ -8604,7 +8605,7 @@ else if (!strcmp(model,"QV-2000UX")) {
   }
 }
 
-#line 9162 "dcraw/dcraw.c"
+#line 9161 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -8823,7 +8824,7 @@ int CLASS flip_index (int row, int col)
   return row * iwidth + col;
 }
 
-#line 9405 "dcraw/dcraw.c"
+#line 9404 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
