@@ -21,9 +21,9 @@ it under the terms of the one of three licenses as you choose:
    for more information
 */
 
-#line 27 "dcraw/dcraw.c"
+#line 25 "dcraw/dcraw.c"
 #define NO_JPEG
-#line 32 "dcraw/dcraw.c"
+#line 30 "dcraw/dcraw.c"
 #define VERSION "9.05"
 
 #ifndef _GNU_SOURCE
@@ -50,14 +50,14 @@ it under the terms of the one of three licenses as you choose:
 #ifndef NO_JPEG
 #include <jpeglib.h>
 #endif
-#line 63 "dcraw/dcraw.c"
+#line 61 "dcraw/dcraw.c"
 #ifdef LOCALEDIR
 #include <libintl.h>
 #define _(String) gettext(String)
 #else
 #define _(String) (String)
 #endif
-#line 77 "dcraw/dcraw.c"
+#line 75 "dcraw/dcraw.c"
 #ifdef __CYGWIN__
 #include <io.h>
 #endif
@@ -68,12 +68,12 @@ it under the terms of the one of three licenses as you choose:
 #define snprintf _snprintf
 #define strcasecmp _stricmp
 #define strncasecmp strnicmp
-#line 91 "dcraw/dcraw.c"
+#line 89 "dcraw/dcraw.c"
 #else
 #include <unistd.h>
 #include <utime.h>
 #include <netinet/in.h>
-#line 99 "dcraw/dcraw.c"
+#line 97 "dcraw/dcraw.c"
 #endif
 
 #ifdef LJPEG_DECODE
@@ -84,7 +84,7 @@ it under the terms of the one of three licenses as you choose:
 #ifndef LONG_BIT
 #define LONG_BIT (8 * sizeof (long))
 #endif
-#line 176 "dcraw/dcraw.c"
+#line 174 "dcraw/dcraw.c"
 #define FORC(cnt) for (c=0; c < cnt; c++)
 #define FORC3 FORC(3)
 #define FORC4 FORC(4)
@@ -138,7 +138,7 @@ it under the terms of the one of three licenses as you choose:
 	3 G R G R G R	3 B G B G B G	3 R G R G R G	3 G B G B G B
  */
 
-#line 234 "dcraw/dcraw.c"
+#line 232 "dcraw/dcraw.c"
 #define BAYER(row,col) \
 	image[((row) >> shrink)*iwidth + ((col) >> shrink)][FC(row,col)]
 #define BAYER2(row,col) \
