@@ -1,3 +1,6 @@
+2010-11-21 Alex Tutubalin <lexa@lexa.ru>
+	* Fixes to green_matching code by Sergey Pavlov
+
 2010-11-20 Alex Tutubalin <lexa@lexa.ru>
         * Update for new demosaic-pack-GPL3
 	* LibRaw 0.12.0-Beta1
